--- a/angular.json
+++ b/angular.json
@@ -27,11 +27,14 @@
               "src/styles.css",
               "node_modules/angular-calendar/css/angular-calendar.css"
             ],
-            "scripts": ["node_modules/jquery/dist/jquery.min.js",
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
               "node_modules/popper.js/dist/umd/popper.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
-            "src/assets/js/MultiCarousel.js",
-            "src/assets/js/myJsFile.js"]
+              "src/assets/js/MultiCarousel.js",
+              "src/assets/js/myJsFile.js",
+              "src/assets/js/counter.js"
+            ]
           },
           "configurations": {
             "production": {
