--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
     "flatpickr": "^4.5.0",
+    "fullcalendar": "^3.6.1",
     "jquery": "^3.3.1",
     "ng-bootstrap": "^1.6.3",
+    "ng-fullcalendar": "^1.7.1",
     "ng2-file-upload": "^1.3.0",
     "popper.js": "^1.14.3",
     "rxjs": "^6.0.0",
