--- a/angular.json
+++ b/angular.json
@@ -24,8 +24,9 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.css",              
-              "node_modules/angular-calendar/css/angular-calendar.css"
+              "src/styles.css",
+              "node_modules/angular-calendar/css/angular-calendar.css",
+              "src/assets/css/animate.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
