--- a/package.json
+++ b/package.json
@@ -22,21 +22,28 @@
     "@angular/router": "^6.0.3",
     "@ng-bootstrap/ng-bootstrap": "^2.2.0",
     "@types/jquery": "^3.3.29",
+    "@types/jspdf": "^1.3.1",
     "angular-calendar": "^0.25.2",
     "angular-captcha": "^3.4.1",
     "angularx-flatpickr": "^6.0.0",
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
+    "file-saver": "1.3.8",
     "flatpickr": "^4.5.0",
     "fullcalendar": "^3.6.1",
+    "html-to-text": "^5.1.1",
+    "html2canvas": "^1.0.0-rc.2",
     "jquery": "^3.3.1",
+    "jspdf": "^1.5.3",
     "ng-bootstrap": "^1.6.3",
     "ng-fullcalendar": "^1.7.1",
     "ng2-file-upload": "^1.3.0",
     "ng2-search-filter": "^0.4.7",
+    "ngx-export-as": "^1.3.0",
     "ngx-filter-pipe": "^2.1.2",
     "popper.js": "^1.14.3",
     "rxjs": "^6.0.0",
+    "xlsx": "0.12.13",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
